# ebook-manager

./: .flake8  .gitignore  CALIBRE_DATABASE_IMPORT.md  CALIBRE_IMPORT_FIX.md  CALIBRE_IMPORT_INVESTIGATION.md  CALIBRE_LIBRARY_INTEGRATION.md  CALIBRE_SYNC.md  CALIBRE_TAKES_CONTROL.md  CONTRIBUTING.md  INSTALL.md  INTEGRATION_INVESTIGATION_COMPLETE.md  LICENSE  METADATA_SYNC.md  ORGANIZE_FIRST_WORKFLOW.md  README.md  SYNC_CALIBRE.md  WORKFLOW_COMPARISON.md  WORKFLOW_REVOLUTION.md  WORKSPACE.md  add_to_path.bat  add_to_path.ps1  demo_calibre_errors.py  demo_sync_feature.py  ebook-manager.code-workspace  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_book.epub  test_calibre_db.py  use-ebm.ps1
.github/workflows/: quality.yml  release.yml  test.yml
ebook_manager/: __init__.py  __main__.py  core.py
examples/: ONEFILE_FEATURE.md  calibre_sync_demo.py  metadata_sync_demo.py  onefile_demo.py
tests/: test_ebook_manager.py
